# Turbo-yuan-ROS2-

chapt1/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  helloworld.cpp
chapt2/chapt2_ws/: novel1.txt  novel2.txt  novel3.txt
chapt2/chapt2_ws/install/: local_setup.sh  setup.sh
chapt2/chapt2_ws/install/demo_cpp_pkg/lib/demo_cpp_pkg/: learn_shared_ptr
chapt2/chapt2_ws/install/demo_cpp_pkg/share/demo_cpp_pkg/: local_setup.sh  package.sh
chapt2/chapt2_ws/install/demo_python_pkg/share/demo_python_pkg/: package.sh  package.xml
chapt2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt
chapt2/chapt2_ws/src/demo_cpp_pkg/src/: cpp_node.cpp  learn_auto.cpp  learn_function.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  learn_thread.cpp  person_node.cpp
chapt2/chapt2_ws/src/demo_python_pkg/: setup.py
chapt2/chapt2_ws/src/demo_python_pkg/demo_python_pkg/: learn_thread.py  person_node.py  writer_node.py
chapt2/chapt2_ws/src/install/: local_setup.sh  setup.sh
chapt2/chapt2_ws/src/install/demo_cpp_pkg/lib/demo_cpp_pkg/: cpp_node  learn_auto  person_node
chapt2/chapt2_ws/src/install/demo_cpp_pkg/share/demo_cpp_pkg/: local_setup.sh  package.sh  package.xml
chapt3/topic_ws/: novel1.txt
chapt3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chapt3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
chapt3/topic_ws/src/demo_python_topic/: package.xml  setup.py
chapt3/topic_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
chapt4/chapt4_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapt4/chapt4_ws/install/chapt4_interfaces/include/chapt4_interfaces/chapt4_interfaces/srv/detail/: face_detector__struct.h  patrol__struct.h
chapt4/chapt4_ws/install/chapt4_interfaces/share/ament_index/resource_index/package_run_dependencies/: chapt4_interfaces
chapt4/chapt4_ws/install/chapt4_interfaces/share/chapt4_interfaces/: package.sh  package.xml
chapt4/chapt4_ws/install/chapt4_interfaces/share/chapt4_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake
chapt4/chapt4_ws/install/chapt4_interfaces/share/chapt4_interfaces/srv/: FaceDetector.idl  Patrol.idl  Patrol.srv
chapt4/chapt4_ws/install/demo_cpp_service/lib/demo_cpp_service/: patrol_client  turtle_control
chapt4/chapt4_ws/install/demo_cpp_service/share/demo_cpp_service/: local_setup.sh  package.sh
chapt4/chapt4_ws/install/demo_python_service/lib/demo_python_service/: face_detect_client_node  face_detect_node  learn_face_detect
chapt4/chapt4_ws/install/demo_python_service/share/demo_python_service/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
chapt4/chapt4_ws/log/: latest_build
chapt4/chapt4_ws/src/chapt4_interfaces/srv/: FaceDetector.srv
chapt4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt
chapt4/chapt4_ws/src/demo_cpp_service/launch/: demo.launch.py
chapt4/chapt4_ws/src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
chapt4/chapt4_ws/src/demo_python_service/: package.xml  setup.py
chapt4/chapt4_ws/src/demo_python_service/demo_python_service/: face_detect_node.py
